syntax = "proto3";

package com.trenicall.server.grpc.promozione;

option java_multiple_files = true;
option java_package = "com.trenicall.server.grpc.promozione";
option java_outer_classname = "PromozioneProto";

import "google/protobuf/empty.proto";

service PromozioneService {
  rpc CreaPromozione (CreaPromozioneRequest) returns (PromozioneResponse);
  rpc ListaPromozioni (ListaPromozioniRequest) returns (ListaPromozioniResponse);
  rpc ListaPromozioniAttive (google.protobuf.Empty) returns (ListaPromozioniResponse);
}

message CreaPromozioneRequest {
  string nome = 1;
  double percentualeSconto = 2;
  string inizio = 3;
  string fine = 4;
  string trattaPartenza = 5;
  string trattaArrivo = 6;
  bool soloFedelta = 7;
  string descrizione = 8;
}

message ListaPromozioniRequest {}

message ListaPromozioniResponse {
  repeated PromozioneResponse promozioni = 1;
}

message PromozioneResponse {
  string id = 1;
  string nome = 2;
  string descrizione = 3;
  double percentualeSconto = 4;
  string inizio = 5;
  string fine = 6;
  string trattaPartenza = 7;
  string trattaArrivo = 8;
  bool soloFedelta = 9;
}
